Lecture 5.2 feels pretty close to ready

--- a/finite.tex
+++ b/finite.tex
@@ -206,7 +206,7 @@ With this in mind, given a map \[\Spec R \xrightarrow{f} \moduli{fg},\] life wou
 For any diagram
 \begin{center}
 \begin{tikzcd}
-\Spec R \arrow{r}{f} & \moduli{fgl} \arrow[-,double]{r} \arrow{d} & \context{MU}[0] \arrow{d} \arrow[-,double]{r} & \Spec MU_* \\
+\Spec R \arrow{r}{f} & \moduli{fgl} \arrow[-,double]{r} \arrow{d} & \context{MU}[0] \arrow{d} \arrow[-,double]{r} & \Spec MUP_0 \\
 & \moduli{fg} \arrow[-,double]{r} \arrow[leftarrow]{lu}{\mathrm{flat}} & \context{MU}
 \end{tikzcd}
 \end{center}
