prevent the Loose Ends sections from consuming dates

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -6,14 +6,25 @@
 
 \todo[inline]{I'd like to spend a couple of days talking about ways the picture in this class can be extended, finally, some actually unanswered questions that naturally arise.  The following two section titles are totally made up and probably won't last.}
 
-\section{$E_\infty$ geometry}
-
-\section{Knowns and unknowns}
+\oldsection{$E_\infty$ geometry}
 
 
 
+\subsection*{The modularity of the $M\String$ orientation}
 
-\section{Rational phenomena: character theory for Lubin--Tate spectra}
+$E_\infty$ orientations by $M\String$
+
+$\tmf$, $\TMF$, and $\Tmf$ in terms of $\moduli{ell}$
+
+Thom spectra and $\infty$--categories
+
+The Bousfield--Kuhn functor and the Rezk logarithm
+
+% free $E_\infty$--orientations off of $MU$
+
+
+
+\oldsection{Rational phenomena: character theory for Lubin--Tate spectra}
 
 There's a sufficient amount of reliance on character theory in Matt's thesis that we should talk about it.  You should write that action and then backtrack here to see what you need for it.
 
@@ -81,19 +92,11 @@ Now, apply the genuine $G$-equivariant Chern character to the $K_G$ factor to ge
 
 
 
-\oldsection*{The modularity of the $M\String$ orientation}
+\oldsection{Knowns and unknowns}
 
-$E_\infty$ orientations by $M\String$
 
-$\tmf$, $\TMF$, and $\Tmf$ in terms of $\moduli{ell}$
 
-Thom spectra and $\infty$--categories
-
-The Bousfield--Kuhn functor and the Rezk logarithm
-
-% free $E_\infty$--orientations off of $MU$
-
-\oldsection*{Higher orientations}
+\subsection*{Higher orientations}
 
 $\TAF$ and friends
 
@@ -101,17 +104,17 @@ The $\alpha_{1/1}$ argument: Prop 2.3.2 of Hovey's $v_n$--elements of ring spect
 
 % The HLP calculations
 
-\oldsection*{Equivariance}
+\subsection*{Equivariance}
 
 This is tied up with the theory of power operations in a way I've never really thought about.  Seems complicated.
 
-\oldsection*{Index theorems}
+\subsection*{Index theorems}
 
 Connections with analysis
 
 The Stolz--Teichner program
 
-\oldsection*{Contexts for structured ring spectra}
+
 
 
 
@@ -119,6 +122,8 @@ The Stolz--Teichner program
 
 
 -----
+
+Contexts for structured ring spectra
 
 Difficulty in computing $\S_d \actson E_d^*$. (Gross--Hopkins and the period map.)
 
