moved a reference out of the tail of main

--- a/finite.tex
+++ b/finite.tex
@@ -572,7 +572,9 @@ A $BP_*$--module $M$ gives a flat sheaf on $\moduli{fg}$ exactly when $(p, v_1, 
 Point out that it's most important to understand $K(d)$ for each $d$, not $K_\Gamma$ for every $\Gamma$.
 
 \begin{remark}
-Morava $K$--theory at the even prime is not commutative.\todo{cf.\ Section 5.2 of KLW.}
+Morava $K$--theory at the even prime is not commutative.
+
+\todo[inline]{cf.\ Section 5.2 of KLW.  Or, at $p = 2$ there is a derivation $Q: K \to \Susp K$ with $ab - ba = u Q(a) Q(b)$, so $K^0 X$ is commutative whenever $K^1 X = 0$ (cf.\ Theorem 2.13 of Strickland's \textit{Products on $MU$--modules}).}
 \end{remark}
 
 
