committing slight work on Lecture 5.1 for a merge

--- a/quillen.tex
+++ b/quillen.tex
@@ -462,7 +462,7 @@ Let $\zeta: X_E \to X_E \times \CP^\infty_E$ denote the pointing of the formal c
 In terms of a complex-oriented $E$ and \Cref{CohomologyOfProjectivization}, the effect of pulling back along the zero section is to set $t = 0$, which collapses the Chern polynomial to just the top class $c_n(\xi)$.  This element, called \textit{the Euler class of $\xi$}, provides the $E^* X$--module generator of $E^* T(\xi)$ --- or, equivalently, the trivializing section of $\ThomSheaf{\xi}$.
 \end{remark}
 
-\begin{theorem}
+\begin{theorem}\label{ComplexOrientationsInTermsOfTrivs}
 A trivialization $t\co \ThomSheaf{\L - 1} \cong \sheaf O_{\CP^\infty_E}$ of the Thom sheaf associated to the canonical bundle induces a ring map $MU \to E$.
 \end{theorem}
 \begin{proof}
