--- a/sigma.tex
+++ b/sigma.tex
@@ -13,6 +13,17 @@
 
 \section{Special divisors and $MSU$--orientations}
 
+Starting today, after our extended interludes on chromatic homotopy theory and cooperations, we are going to return to thinking about bordism orientations directly.  Recall that in \Cref{ComplexBordismChapter} we deduced descriptions of the sets of ring maps $MU \to E$:
+\begin{theorem}[{\Cref{ComplexOrientationsInTermsOfTrivs}}]
+There is a bijection between ring maps $MU \to E$ (resp., $MUP \to E$) and trivializations of the line bundle $\ThomSheaf{\L - 1}$ (resp., $\ThomSheaf{\L}$) on the formal scheme $\CP^\infty_E$.  In fact, such trivializations are encoded by the scheme-theoretic data $(\Spec E_0 MU)(E_0)$ (resp., $(\Spec E_0 MUP)(E_0)$). \qed
+\end{theorem}
+
+
+
+
+
+
+
 Recall the description of $MUP$--orientations as trivializations of a certain line bundle
 
 Describe $MU$--orientations as trivializations of another line bundle
@@ -86,7 +97,7 @@ MU\<2k\> \arrow{r}{\Delta} & MU\<2k\> \sm BU\<2k\>_+.
 
 
 
-\begin{lemma}
+\begin{lemma}[{\cite[Lemma 6.1]{AndoStrickland}}]\label{BSUtoBUtoCPinftyIsSexseq}
 The Postnikov fibration \[BSU \to BU \xrightarrow{B\det} BU(1)\] induces a short exact sequence of group schemes
 \begin{center}
 \begin{tikzcd}
@@ -282,12 +293,9 @@ The construction of adjoint elements from maps of spectra converts sums to produ
 That described the bottom-left arm of the square.  For the other arm, take $w = \beta \circ \mu \in H^3(B\Z/p^j)^{\times 2}$ with adjoint $\hat w \co \CP^\infty_E[p^j]^{\times 2} \times K(\Z, 3)^E \to \Gm$.  Naturality shows $\hat w \circ \gamma^E = \widehat{\gamma_* w}$, and the theorem shows $\gamma_* w = \pm d_n(\L_1, \L_2)$, hence $\widehat{\gamma_* w} = (\pm d_n(\L_1, \L_2))\hat{}$, which is adjoint to $(e_n \Pi_3)^\pm$.
 \end{proof}
 
-\begin{lemma}\citeme{AS Lemma 6.1}
+\begin{lemma}[{\Cref{BSUtoBUtoCPinftyIsSexseq} + Cartier duality}]
 There is a short exact sequence \[BSU^E \from BU^E \from (\CP^\infty)^E.\]
 \end{lemma}
-\begin{proof}
-There is a topological splitting $BU \simeq BSU \times \CP^\infty$ using the determinant map (although not as $H$--spaces, of course), and hence a short exact sequence of formal group schemes \[0 \to BSU_E \to BU_E \to \CP^\infty_E \to 0.\]  Since Cartier duality is an exact functor, \[0 \from BSU^E \from BU^E \from (\CP^\infty)^E \from 0\] is also a short exact sequence.\footnote{Although, you'll notice that Cartier duality is not functorial for maps of formal schemes which are not homomorphisms, so the map $BU(1)_E \to BU_E$ is not necessarily sent to anything useful.}
-\end{proof}
 
 \todo[inline]{There's a nice construction of the $\Pi_k$ maps in the AHS preprint where the ``$C_k$'' constructions are performed directly on the spectra, then applying $(-)_E$ carries those constructions to relevant constructions on group schemes, and finally Cartier duality gives the maps $\Pi_k$ of the sort described above.  This is superior to saying ``adjoint'', in my opinion, though it could be remarked that these are equivalent.}
 
