Fixed sseqpages error for old versions of Tikz.

--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 % \usepackage{savetrees}
 \usepackage{amsmath,amssymb,amsfonts,amsthm,stmaryrd}
 \usepackage{hyperref}
-\usepackage{sseqpages/sseqpages}
+\usepackage[version warn]{sseqpages/sseqpages}
 %\usepackage{stmaryrd}
 %\usepackage{MnSymbol}
 
