--- a/finite.tex
+++ b/finite.tex
@@ -31,7 +31,7 @@ Our answer to this question will come out of considering Grothendieck's framewor
 \item What conditions can be placed on $f$ so that the category of descent data for any given module is always contractible, called \textit{effectivity}?
 \end{itemize}
 
-The essential structure of these answers is easy to guess if we proceed by example, using the few tools available to us.  Suppose that we begin instead with an $R$--module $M$ and we set $N = M \otimes_R S$.  By tensoring up, we have two $R$--algebra maps $S \to S \otimes_R S$, given by including along either factor, and we can further tensor $N$ up to $N \otimes_R S$ or $S \otimes_R N$.  Since $N$ came from the $R$--module $M$, these are canonically isomorphic: \[\phi\co ((f \otimes 1) \circ f)^* M \cong ((1 \otimes f) \circ f)^* M.\]  Repeating this process produces more isomorphisms which compose according to the triangle
+The essential structure of these answers is easy to guess if we proceed by example, using the few tools available to us.  Suppose that we begin instead with an $R$--module $M$ and we set $N = M \otimes_R S$.  By tensoring up, we have two $R$--algebra maps $S \to S \otimes_R S$, given by including along either factor, and we can further tensor $N$ up to $N \otimes_R S$ or $S \otimes_R N$.  Since $N$ came from the $R$--module $M$, these are canonically isomorphic: \[\phi\co ((f \otimes 1) \circ f)^* M \cong ((1 \otimes f) \circ f)^* M.\]  \todo{The notation $f^*$ confused me briefly: you push-forward modules but pull-back quasicoherent sheaves.} Repeating this process produces more isomorphisms which compose according to the triangle
 \begin{center}
 \begin{tikzcd}
 N \otimes_R S \otimes_R S \arrow["\phi_{13}", "\simeq"']{rr} \arrow["\phi_{12}", "\simeq"']{rd} & & S \otimes_R S \otimes_R N \\
@@ -86,6 +86,7 @@ A \arrow{rr}{i} \arrow{rd}{j} & & X \\
 & X^\wedge_A. \arrow{ru}{k}
 \end{tikzcd}
 \end{center}
+\todo{You haven't defined $X^\wedge_A$ at this point.}
 If $X$ is Noetherian, then $k^*$ is flat as a functor of sheaves, $j^*$ is conservative as a functor in the derived category of sheaves, and there is an equivalence of derived categories of sheaves over $X^\wedge_A$ and sheaves over the descent object $\sheaf D_{A \to X}$.\todo{Surely you're supposed to be saying ``bounded'' sometimes when you talk about the derived category.} \qed
 \end{theorem}
 
@@ -109,6 +110,7 @@ Let $\sheaf D_E(X)$ be the cosimplicial spectrum determined by the formula
 \cdots
 \end{tikzcd}
 \right\}.\]
+\todo{The arrows are/were aligned incorrectly.} 
 It is called \textit{the descent object for $X$ from $E$ to $\S$}.
 \end{definition}
 It is not always the case that $X^\wedge_E$ can be lifted from a cosimplicial object in the homotopy category to a sufficiently structured cosimplicial object that we could take its totalization or homotopy colimit.
@@ -146,6 +148,7 @@ Suppose that $E$ is a ring spectrum satisfying {\CH}.  We define a simplicial sc
 \end{tikzcd}
 \right\}.
 \end{align*}
+\todo{The arrows are/were aligned incorrectly.} 
 \end{definition}
 
 The context is the wellspring of the algebraic category $\CatOf C$ dreamed of in the introduction to this lecture.
@@ -245,7 +248,7 @@ Given a formal group law $\phi$ over a ring $R$ and a surjective ring map $f\co 
 \end{corollary}
 
 \begin{remark}
-One might hope that the filtration above has an immediate geometric realization.  After all, one can consider the $n${\th} order formal neighborhood $\A^{1, (n)}$ of \Cref{FiniteOrderAffineSpaceDefn}.  The appropriate analogue of \Cref{MapsOfFVarsArePowerSeries} shows that a map \[\A^{1, (n)} \times \A^{1, (n)} \to \A^{1, (n)}\] is represented by a bivariate power series, \emph{modulo the ideal $(x^{n+1}, y^{n+1})$}.  This ideal is distinct from $(x, y)^{n+1}$, and so the source scheme of a formal $n$--bud is not the square of $\A^{1, (n)}$, and a formal $n$--bud does \emph{not} determine a group object on some finite scheme.  This is actually a good thing: there are structure theorems preventing many of these intermediate group structures on finite schemes from existing.\citeme{Akhil is who reminded me of this, back in Berkeley.}
+One might hope that the filtration\todo{What filtration?} above has an immediate geometric realization.  After all, one can consider the $n${\th} order formal neighborhood $\A^{1, (n)}$ of \Cref{FiniteOrderAffineSpaceDefn}.  The appropriate analogue of \Cref{MapsOfFVarsArePowerSeries} shows that a map \[\A^{1, (n)} \times \A^{1, (n)} \to \A^{1, (n)}\] is represented by a bivariate power series, \emph{modulo the ideal $(x^{n+1}, y^{n+1})$}.  This ideal is distinct from $(x, y)^{n+1}$, and so the source scheme of a formal $n$--bud is not the square of $\A^{1, (n)}$, and a formal $n$--bud does \emph{not} determine a group object on some finite scheme.  This is actually a good thing: there are structure theorems preventing many of these intermediate group structures on finite schemes from existing.\citeme{Akhil is who reminded me of this, back in Berkeley.}
 \end{remark}
 
 \todo{There's some hidden text here about $n$--buds, but I don't think we ever care about it.}
@@ -265,7 +268,7 @@ One might hope that the filtration above has an immediate geometric realization.
 % \end{corollary}
 
 \begin{proof}[{Proof of \Cref{LazardsTheorem}}]
-Let $U = \Z[b_0, b_1, b_2, \ldots] / (b_0 - 1)$ be the universal ring supporting a ``strict'' exponential \[\exp(x) := \sum_{j=0}^\infty b_j x^{j+1}\] with compositional inverse \[\log(x) := \sum_{j=0}^\infty m_j x^{j+1}.\]  They induce a formal group law on $U$ by the formula \[x +_U y = \exp(\log(x) + \log(y)),\] classified by a map $u\co L_\infty \to U$.  Modulo decomposables, this map can be computed as \[u(a_{i(n-i)}) = \binom{n}{i} b_{n-1} \pmod{\text{decomposables}}.\]  Writing $d_n = \gcd\left( \binom{n}{i} \middle| 0 < k < n \right)$, the map $Qu$ on degree $2n$ has image the subgroup generated by $d_{n+1} b_n$.  We write $T_{2n}$ for this subgroup.  Using the splitting of $Qu$ from \Cref{Symmetric2CocycleLemma}.4 below, we use the freeness of $U$ to \emph{choose} an algebra splitting \[U \xrightarrow{v} L_\infty \xrightarrow{u} U.\]  The map $v$ is an isomorphism because $uv$ is injective and because we have checked that $v$ is surjective on indecomposables.\todo{Do the intermediate rings matter here?}
+Let $U = \Z[b_0, b_1, b_2, \ldots] / (b_0 - 1)$ be the universal ring supporting a ``strict'' exponential \[\exp(x) := \sum_{j=0}^\infty b_j x^{j+1}\] with compositional inverse \[\log(x) := \sum_{j=0}^\infty m_j x^{j+1}.\]  They induce a formal group law on $U$ by the formula \[x +_U y = \exp(\log(x) + \log(y)),\] classified by a map $u\co L_\infty \to U$. \todo{Why are you writing $L_\infty$ instead of $\sheaf{O}_{\moduli{fgl}}$?}  Modulo decomposables, this map can be computed as \[u(a_{i(n-i)}) = \binom{n}{i} b_{n-1} \pmod{\text{decomposables}}.\]  Writing $d_n = \gcd\left( \binom{n}{i} \middle| 0 < k < n \right)$, the map $Qu$ on degree $2n$ has image the subgroup generated by $d_{n+1} b_n$.  We write $T_{2n}$ for this subgroup.  Using the splitting of $Qu$ from \Cref{Symmetric2CocycleLemma}.4 below, we use the freeness of $U$ to \emph{choose} an algebra splitting \[U \xrightarrow{v} L_\infty \xrightarrow{u} U.\]  The map $v$ is an isomorphism because $uv$ is injective and because we have checked that $v$ is surjective on indecomposables.\todo{This last sentence was a little quick for me.  For example, I don't think you're ``checking'' that $v$ is surjective but more observing that it is so by construction.}\todo{Do the intermediate rings matter here?}
 \end{proof}
 
 \begin{definition}
@@ -282,7 +285,7 @@ The following are equivalent and true:
 \end{enumerate}
 \end{lemma}
 \begin{proof}[Equivalences]\renewcommand{\qedsymbol}{}
-Verifying that Claims 1 and 2 are equivalent is a matter of writing out the purported $(r+1)$--buds and taking their difference.  To see that Claim 2 is equivalent to Claim 3, follow the chain \[\CatOf{Groups}((QL)_{2n}, A) \cong \CatOf{Rings}(\Z \oplus (QL)_{2n}, \Z \oplus \Susp^{2n} A) \cong \CatOf{Rings}(L, \Z \oplus \Susp^{2n} A).\]  This shows that such a homomorphism of groups determines an extension of the $n$--bud $\G_a$ to an $(n+1)$--bud, which takes the form of a $2$--cocycle with coefficients in $A$, and hence factors through $T_{2n}$.  Finally, Claim 4 is the universal case of Claim 3.
+Verifying that Claims 1 and 2 are equivalent is a matter of writing out the purported $(r+1)$--buds and taking their difference. \todo{Do you mean write out a $(r+1)$-bud and applying the associativity axiom?}To see that Claim 2 is equivalent to Claim 3, follow the chain \[\CatOf{Groups}((QL)_{2n}, A) \cong \CatOf{Rings}(\Z \oplus (QL)_{2n}, \Z \oplus \Susp^{2n} A) \cong \CatOf{Rings}(L, \Z \oplus \Susp^{2n} A).\]  This shows that such a homomorphism of groups determines an extension of the $n$--bud $\G_a$ to an $(n+1)$--bud, which takes the form of a $2$--cocycle with coefficients in $A$, and hence factors through $T_{2n}$.  Finally, Claim 4 is the universal case of Claim 3.
 \end{proof}
 
 We will prove Claim 1 tomorrow.
